fixing drop down menu z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,14 @@
 html, body {
 	margin: auto;
   height: 100%;
-	background: #f1f1ee;
+	/*background: #f1f1ee;*/
 }
 
 h2 {
 	text-align: center;
-	font-size: 1.5em;
+	font-size: 2em;
 	font-family: 'Abril Fatface', cursive;
-	z-index: 1;
-	color: #010326;
+	color: #FFF;
 	margin: 20px;
 }
 
@@ -29,11 +28,6 @@ h3 {
   height: 100%;
 }
 
-.portfolio-page {
-	/*background: linear-gradient(rgba(1, 3, 38, 0.55), rgba(5, 40, 242, 0.55));*/
-}
-
-}
 .fa, .fa-bars {
   color: #fff;
   font-size: 1.5em;
@@ -48,6 +42,7 @@ a.about-me-list {
   color: #121C25;
 }
 
+/* hover color menu items-links */
 .list-items, .dd-list-items, .about-me-list {
   position: relative;
   text-decoration: none;
@@ -83,19 +78,27 @@ a.about-me-list {
   color: #0583F2 !important;
   transition: color 0.5s ease;
 }
+/* hover color menu items-links */
 
 #navbar {
   width: 100%;
   z-index: 1;
-	justify-content: flex-end;
 	display: flex;
+	justify-content: flex-end;
 }
 
- ul {
+ul {
 	 width: 100%;
 	 display: flex;
 	 justify-content: flex-end;
  }
+
+/* centering drop-down content*/
+#drop-down-content > .drop-down-items > li > a.list-items {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
 a {
   text-decoration: none;
@@ -123,12 +126,12 @@ a {
   max-width: 55%;
 	color: #010326;
 	text-align: center;
-	z-index: 1;
 }
 
 #portfolio-wrapper {
 	padding-top: 5%;
 }
+
 /* about page paragraph */
 #about-me {
   z-index: 1;
@@ -155,47 +158,47 @@ a {
 	color: #05DBF2;
 }
 
-/*hello form page*/
-
 /* dropdown menu*/
 #drop-down {
-	display: flex;
-	justify-content: flex-end;
-	margin: 70px;
+	z-index: 1;
 }
 
 #drop-down-content {
   display: none;
 	position: absolute;
 	background-color: #f9f9f9;
-	min-width: 160px;
+	min-width: 140px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	padding: 12px 16px;
+	transition: all 0.5s ease;
 	z-index: 1;
 }
 
 .fa-bars:hover #drop-down-content {
   display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-  transition: all 0.5s ease-in-out 0s;
+	right: 3px;
+  transition: all 0.5s ease;
   font-size: .75em !important;
 	color: #ED20D4;
+	z-index: 1;
 }
 
 .fa-bars {
 	color: #ED20D4 !important;
 	font-size: 2em;
-	display: flex;
-	justify-content: flex-end;
-	margin: 40px;
+	position: absolute;
+	left: 90%;
+	margin-top: 40px;
 	transition: all 0.5s ease;
 }
 
 .fa-bars:hover .drop-down-items {
 	display: flex;
 	flex-direction: column;
+	font-size: .75em;
 }
 
 /* don't display bars until screen is 600px or less */
@@ -230,15 +233,16 @@ a.project-tag:hover {
 
 form {
 	border-radius: 5px;
-	background: linear-gradient(rgba(5, 40, 242, 0.55), rgba(1, 3, 38, 0.55));
+	background:linear-gradient(rgba(5, 40, 242, 1), rgba(237, 32, 212, 1));
 	box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
-	opacity: .75;
-	min-width: 200px;
-	width: 400px;
+	min-width: 250px;
+	width: 30%;
 	height: 450px;
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 200px;
+	position: absolute;
+  top: 150px;
 }
 
 .contact-input, textarea {
@@ -287,7 +291,6 @@ form {
   color: #FFF;
   font-family: 'PT Sans', sans-serif;
   margin: 50px;
-  z-index: 1;
   transition: all 0.75s ease;
 }
 
@@ -341,8 +344,8 @@ form {
   width: 100%;
 	height: 100%;
 	position: fixed;
-  overflow: hidden;
-  transform: skewY(10deg);
+	z-index: -1;
+	transform: skewY(30deg);
   transform-origin: 0;
-  background:linear-gradient(rgba(5, 40, 242, 0.5), rgba(1, 3, 38, 0.7));
+  background:linear-gradient(rgba(5, 40, 242, 0.5), rgba(237, 32, 212, 0.7));
 }
